# fellows

./: Dockerfile  pyproject.toml
alembic/versions/: 900d57334d14_.py
src/: main.py
src/app/: router.py
src/app/blog/api/: dependencies.py
src/app/blog/model/: blog.py
src/app/blog/repository/: blog.py
src/app/blog/schema/: blog.py
src/app/blog/service/: blog.py
src/app/fellows/api/: dependencies.py
src/app/fellows/data/: ai.py  project.py  terms.py
src/app/fellows/model/: help.py  project.py
src/app/fellows/repository/: contract.py  frappe.py  help.py  project.py  report.py
src/app/fellows/schema/: ai.py  contact.py  contract.py  erpnext.py  help.py  project.py  report.py
src/app/fellows/service/: ai.py  contact.py  contract.py  help.py  project.py  report.py
src/app/gov_api/api/: dependencies.py
src/app/gov_api/repository/: fiscal.py  welfare.py
src/app/gov_api/service/: fiscal.py  welfare.py
src/app/map/service/: map.py
src/app/open_api/api/: dependencies.py
src/app/open_api/model/: fiscal.py  welfare.py
src/app/open_api/schema/: welfare.py
src/app/open_api/service/: welfare.py
src/app/payment/api/: dependencies.py
src/app/payment/model/: payment.py
src/app/payment/repository/: payment.py
src/app/payment/schema/: payment.py
src/app/payment/service/: payment.py
src/app/user/api/: dependencies.py
src/app/user/model/: alert.py  cloud.py  group.py  (+2 more)
src/core/: config.py  lifespan.py  main.c
src/core/dependencies/: auth.py  db.py  infra.py
src/core/models/: model.py  repository.py
src/core/utils/: frappeclient.py
(+29 files in other folders)
