[tool.poetry]
name = "AllZip"
version = "0.1.0"
description = ""
authors = ["IIH <ds5105119@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"

fastapi = {extras = ["standard"], version = "^0.115.2"}
pydantic-settings = "^2.5.2"
uvicorn = {extras = ["standard"], version = "^0.34.0"}

webtool = "^0.1.10"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}

nats-py = "^2.9.0"
openai = "^1.77.0"
boto3 = "^1.38.13"
boto3-stubs = {extras = ["s3"], version = "^1.38.13"}
gunicorn = "^23.0.0"
mypy-boto3-ses = "^1.39.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest-asyncio = "^0.24.0"
psycopg = "^3.2.9"
psycopg-binary = "^3.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["B", "C4", "E", "F", "N", "I", "W", "UP"]
lint.ignore = ["F403","F405","E501","E402","B904"]
lint.fixable = ["A", "B", "C", "D", "E", "F", "I", "UP"]
lint.unfixable = []
lint.per-file-ignores = {}
line-length = 120
target-version = "py313"
exclude= ["alembic"]


[tool.pytest.ini_options]
python_files = "test_*.py"
asyncio_default_fixture_loop_scope = "session"